--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="Homework2,1.js"></script>
+    <script src="Homework2,2.js"></script>
 </body>
 </html>
