--- a/index.html
+++ b/index.html
@@ -9,6 +9,4 @@
     <script src="Homework12,1.js"></script>
     <script src="Homework12,2.js"></script>
     <script src="Homework12,3.js"></script>
-
-</body>
-</html>
+    <script src="ttt.js"></script>
