--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Homework13,1.js"></script>
-    <script src="Homework13,2.js"></script>
-    <script src="Homework13,3.js"></script>
+    <script src="Homework14,1.js"></script>
+    <!-- <script src="Homework14,2.js"></script>
+    <script src="Homework14,3.js"></script> -->
